--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ img{
     width: 100%;
     height: 0;
     padding: 30% 0;
-    background-image: url(../assets/images/lightgrey-line.jpeg); /*change the image to one of you choice */
+    /* background-image: url(../assets/images/lightgrey-line.jpeg); change the image to one of you choice */
     background-position: center;
     background-size: 100%;
     justify-content: center;
